spacing fix, finish Angels-For-Change demo

--- a/angels-for-change/local-assets/stylesheet.css
+++ b/angels-for-change/local-assets/stylesheet.css
@@ -1,24 +1,29 @@
 * {
-    word-wrap: break-word;
+    text-align: left
 }
 
 h2 {
+    font-size: 5em !important;
+    font-weight: 800;
     color: #e73936;
 }
 
-h2, h3 {
-    font-family: proxima-nova;
-    font-weight: 700;
-    font-style: normal;
-    font-size: 107px;
-    letter-spacing: 0em;
-    text-transform: none;
-    line-height: 0em;
+/* reduce vertical space between elements */
+.ticker * {
+    margin: 0;
 }
 
-h1, h2, h3 {
-    margin: 1em 0 .5em;
+h2, h3 {
+    font-family: proxima-nova, sans-serif;
+    font-weight: 650;
+    font-style: normal;
+    font-size: 2em;
+    text-transform: none;
 }
+
+/* h1, h2, h3 {
+    margin: 1em 0 .5em;
+}*/
 
 h3 {
     color: rgba(26,26,26,.9);
@@ -33,8 +38,6 @@ p {
     margin-inline-end: 0px;
     font-weight: 400;
     font-style: normal;
-    font-size: 16px;
-    letter-spacing: 0px;
-    line-height: 1.6em;
+    font-size: 1.2em;
     color: rgba(0,0,0,.65);
 }
